node js actualizado

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </style>
 </head>
 <body>
-  <h1>Prueba con Node.js</h1>
+  <h1>Node.js actualizado</h1>
   <div class="card">
     <h2>Bienvenido</h2>
     <p>Esta es una página básica servida con <b>Node.js</b>.</p>
